Fix color contrast for "Markdown" link

--- a/ckan/public/base/css/main-rtl.css
+++ b/ckan/public/base/css/main-rtl.css
@@ -14711,7 +14711,6 @@ select[data-module="autocomplete"] {
   color: #282828;
 }
 .editor .editor-info-block a {
-  color: #187794;
   text-decoration: none;
 }
 .control-custom {
