--- a/ckan/public/base/css/main.css
+++ b/ckan/public/base/css/main.css
@@ -7797,7 +7797,6 @@ select[data-module="autocomplete"] {
   color: #282828;
 }
 .editor .editor-info-block a {
-  color: #187794;
   text-decoration: none;
 }
 .control-custom {
